[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Miriam Zimmerman <miriam@mutexlox.com>"]
edition = "2018"

[dependencies]

[[bin]]
name = "day01"
path = "src/day01_rocket_equation.rs"

[[bin]]
name = "day02"
path = "src/day02_program_alarm.rs"

[[bin]]
name = "day03"
path = "src/day03_crossed_wires.rs"


[lib]
name = "intcode"
path = "src/intcode.rs"
