[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Miriam Zimmerman <miriam@mutexlox.com>"]
edition = "2018"

[dependencies]
itertools = "*"

[[bin]]
name = "day01"
path = "src/day01_rocket_equation.rs"

[[bin]]
name = "day02"
path = "src/day02_program_alarm.rs"

[[bin]]
name = "day03"
path = "src/day03_crossed_wires.rs"

[[bin]]
name = "day04"
path = "src/day04_container.rs"

[[bin]]
name = "day05"
path = "src/day05_asteroids.rs"

[[bin]]
name = "day06"
path = "src/day06_orbit.rs"

[[bin]]
name = "day07"
path = "src/day07_amplifier.rs"

[[bin]]
name = "day08"
path = "src/day08_space_image.rs"

[lib]
name = "intcode"
path = "src/intcode.rs"
