[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Miriam Zimmerman <miriam@mutexlox.com>"]
edition = "2018"

[dependencies]
itertools = "*"
float_eq = "0.5.0"

[[bin]]
name = "day01"
path = "src/day01_rocket_equation.rs"

[[bin]]
name = "day02"
path = "src/day02_program_alarm.rs"

[[bin]]
name = "day03"
path = "src/day03_crossed_wires.rs"

[[bin]]
name = "day04"
path = "src/day04_container.rs"

[[bin]]
name = "day05"
path = "src/day05_asteroids.rs"

[[bin]]
name = "day06"
path = "src/day06_orbit.rs"

[[bin]]
name = "day07"
path = "src/day07_amplifier.rs"

[[bin]]
name = "day08"
path = "src/day08_space_image.rs"

[[bin]]
name = "day09"
path = "src/day09_sensor_boost.rs"

[[bin]]
name = "day10"
path = "src/day10_asteroid_visible.rs"

[[bin]]
name = "day11"
path = "src/day11_paint_intcode.rs"

[[bin]]
name = "day12"
path = "src/day12_nbodies.rs"

[[bin]]
name = "day13"
path = "src/day13_intcode_game.rs"

[[bin]]
name = "day14"
path = "src/day14_stoichiometry.rs"

[[bin]]
name = "day15"
path = "src/day15_oxygen.rs"

[[bin]]
name = "day16"
path = "src/day16_fft.rs"

[[bin]]
name = "day17"
path = "src/day17_scaffolding.rs"

[lib]
name = "intcode"
path = "src/intcode.rs"
